infra/network-policies/global/02-allow-dns-chain.yaml
---
# CoreDNS -> Pi-hole (forwarder)
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: zt-coredns-to-pihole
spec:
  order: 21
  namespaceSelector: kubernetes.io/metadata.name == "kube-system"
  selector: k8s-app == "kube-dns"
  types:
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        namespaceSelector: kubernetes.io/metadata.name == "pihole"
        ports: [53]
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: kubernetes.io/metadata.name == "pihole"
        ports: [53]
---
# Pi-hole -> Unbound (recursive resolver in `dns` namespace)
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: zt-pihole-to-unbound
spec:
  order: 22
  namespaceSelector: kubernetes.io/metadata.name == "pihole"
  types:
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        namespaceSelector: kubernetes.io/metadata.name == "dns"
        ports: [53]
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: kubernetes.io/metadata.name == "dns"
        ports: [53]
---
# Unbound -> internet (root/authoritative DNS)
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: zt-unbound-to-internet-dns
spec:
  order: 23
  namespaceSelector: kubernetes.io/metadata.name == "dns"
  types:
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        ports: [53]
    - action: Allow
      protocol: TCP
      destination:
        ports: [53]
